# ProceduralTerrainGen

./: CMakeLists.txt  readme.md
res/shaders/water/: water.frag  water.vert
src/: core.cpp  core.hpp  main.cpp
src/erosion/: hydro.cpp  hydro.hpp
src/geometry/: chunkData.cpp  chunkData.hpp  chunkManager.cpp  chunkManager.hpp
src/map/: MapGenerator.cpp  MapGenerator.hpp
src/model/: modelManager.cpp  modelManager.hpp
src/noise/: PerlinNoise.cpp  PerlinNoise.hpp
src/structures/: LF_landDetail.cpp  LF_landDetail.hpp  core.cpp  core.hpp  landmass.cpp  landmass.hpp  mountains.cpp  mountains.hpp  roughness.cpp  roughness.hpp
src/util/: hashFunc.hpp
